# telco-customer-churn

./: .gitignore  README.md  pyproject.toml
telco_customer_churn/data_analysis/: EDA.ipynb  data_preparation.ipynb
telco_customer_churn/data_preparation_and_EDA/: data_preprocessing_and_eda.ipynb
telco_customer_churn/modeling/: feature_engineering.ipynb  feature_selection.ipynb  model_feature_selection.ipynb  model_selection.ipynb
telco_customer_churn/serialization/: churn_predictor.pickle  churn_predictor.py  column_rename.json  columns.json  engineered_data.csv  preprocessor.pickle
telco_customer_churn/web_app/: churn_predictor_app.py
telco_customer_churn/web_app/static/: styles.css
telco_customer_churn/web_app/templates/: index.html
