[tool.poetry]
name = "telco-customer-churn"
version = "0.1.0"
description = ""
authors = ["ge0rgeth0mas <georgethomas1912@gmail.com>"]
readme = "README.md"
packages = [{include = "telco_customer_churn"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
plotly = "^5.15.0"
nbformat = "^5.9.0"
lazypredict = "^0.2.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
